tests/errors/syn_class_var4.java
public class syn_class_var4 {
public int[] name ;
}